--- a/index.html
+++ b/index.html
@@ -3,12 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-   
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+<body>
+    <header class="page-header">
+        <div class="container">
+            <div class="logo">
+                <img src="" alt="логотип">
+            </div>
+            <nav class="page-navigation">
+                <ul>
+                    <li>OVERVIEW</li>
+                    <li>FEATURES</li>
+                    <li>TECHNOLOGY</li>
+                    <li>CONTACT</li>
+                    <li>SING UP</li>
+                </ul>
+            </nav>
+            <button class="botton-login"><a href=""> LOGIN </a> </button>
+        </div>
+    </header>
+    <section class="main-section">
+        <div class="container">
+            <div>
+                <h1>CLOUDBUDGET</h1>
+                 <P>Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of Up to €4.99</P>
+                <button class="button-sing up"><a href="">SING UP</a></button>
+            </div>
+        </div>
+    </section>
+    <section class="Section Section-Video">
+        <div class="container">
+            <div class="description">
+                <h3>Easy to Use Cloud Budget Management Software </h3>
+                <p>Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</p>
+                <a href="">Learn more</a>
+            </div>
+            <div class="Video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hBjEaG0uH24" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+    <section class="Section Section-Features">
+        <div class="container">
+            <h3>Features</h3>
+            <div class="Card card-1">
+                <div class="Card-1-img">
+                   <img src="img/Bg1.png" alt="картинка 1">
+                </div>
+                <div class="Card-1-text">
+                    <h4>Supports All Currencies Cards</h4>
+                    <p>We support all popular currencies and is fully customizable to add</p>
+                    <a href="">Read more</a>
+                </div>
+            </div>
+            <div class="Card card-2">
+                <div class="Card-2-img">
+                   <img src="img/Bg2.png" alt="картинка 2">
+                </div>
+                <div class="Card-2-text">
+                    <h4>Manage Your Expenses On The Go</h4>
+                    <p>You can access your account from anywhere in the world on any device</p>
+                    <a href="">Read more</a>
+                </div>
+            </div>
+            <div class="Card card-3">
+                <div class="Card-3-img">
+                   <img src="img/Bg3.png" alt="картинка 2">
+                </div>
+                <div class="Card-3-text">
+                    <h4>Cloud Budget Management Software</h4>
+                    <p>Our software is made so you can access and manage your budget</p>
+                    <a href="">Read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="Section Section-Technology">
+        <div class="container">
+            <h3>Technology</h3>
+            <div class="Tech tech-cloud storage">
+                <div class="cloud storage-text">
+                    <h4>Cloud Storage</h4>
+                    <p>Access your account from anywhere in the world on any device</p>
+                </div>
+            </div>
+            <div class="Tech tech-secure">
+                <div class="secure-text">
+                    <h4>Secure</h4>
+                    <p>All your information is stored on secure cloud servers</p>
+                </div>
+            </div>
+            <div class="Tech tech-PDF">
+                <div class="PDF-text">
+                    <h4>PDF Download</h4>
+                    <p>Download any of your reports in PDF format</p>
+                </div>
+                <div class="Tech tech-CSV">
+                    <div class="CSV-text">
+                        <h4>CSV Download</h4>
+                        <p>All your information is stored on secure cloud servers</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-inf">
+            <div >
+                <h5>Adress</h5>
+             <p>Pipang Ltd, Griva Digeni,
+                81-83 Jacovides Tower, 1st Floor
+                1090 Picosia USA</p>
+            </div>
+            <div>
+                <h5>Services</h5>
+                <ul class="footer-list">
+                    <li>Owerview</li>
+                    <li>Features</li>
+                    <li>Technology</li>
+                    <li>Terms&Conditions</li>
+                    <li>Privecy</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Get in Touch</h5>
+                <p>info@cloudbudget.com
+                    +1 844-721-7120
+                </p>
+            </div>
+            <div>
+                <h5>We Support</h5>
+                <img src="img/secure-p-1 1.png" alt="платежные системы">
+            </div>
+        </div>
+    </footer>
+
 </body>
-<h1>Заголовок 1 </h1>
-1 2 3
-</html> 
+
+</html>
