--- a/index.html
+++ b/index.html
@@ -1,121 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!--Кодировка сайта-->
     <meta charset="UTF-8">
+
+    <!--Для адаптации сайта-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Мета теги для мобильных устройств-->
+    <meta name="format-direction" content="telephone=no">
+    <meta name="format-direction" content="date=no">
+    <meta name="format-direction" content="address=no">
+    <meta name="format-direction" content="email=no">
+    <meta content="notranslate" name="google">
+
+    <!--Заголовок страницы-->
     <title>Document</title>
+
+    <!--Для SEO-->
+    <meta name="keywords" content="">
+    <meta name="discription" content="">
+
+    <!--Подлючение стилей-->
     <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    <header class="page-header">
-        <div class="container">
-            <div class="logo">
-                <img src="" alt="логотип">
-            </div>
-            <nav class="page-navigation">
-                <ul>
-                    <li>OVERVIEW</li>
-                    <li>FEATURES</li>
-                    <li>TECHNOLOGY</li>
-                    <li>CONTACT</li>
-                    <li>SING UP</li>
-                </ul>
-            </nav>
-            <button class="botton-login"><a href=""> LOGIN </a> </button>
-        </div>
-    </header>
-    <section class="main-section">
-        <div class="container">
-            <div>
-                <h1>CLOUDBUDGET</h1>
-                 <P>Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of Up to €4.99</P>
-                <button class="button-sing up"><a href="">SING UP</a></button>
-            </div>
-        </div>
-    </section>
-    <section class="Section Section-Video">
-        <div class="container">
-            <div class="description">
-                <h3>Easy to Use Cloud Budget Management Software </h3>
-                <p>Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</p>
-                <a href="">Learn more</a>
-            </div>
-            <div class="Video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/hBjEaG0uH24" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-    <section class="Section Section-Features">
-        <div class="container">
-            <h3>Features</h3>
-            <div class="Card card-1">
-                <div class="Card-1-img">
-                   <img src="img/Bg1.png" alt="картинка 1">
-                </div>
-                <div class="Card-1-text">
-                    <h4>Supports All Currencies Cards</h4>
-                    <p>We support all popular currencies and is fully customizable to add</p>
-                    <a href="">Read more</a>
-                </div>
-            </div>
-            <div class="Card card-2">
-                <div class="Card-2-img">
-                   <img src="img/Bg2.png" alt="картинка 2">
-                </div>
-                <div class="Card-2-text">
-                    <h4>Manage Your Expenses On The Go</h4>
-                    <p>You can access your account from anywhere in the world on any device</p>
-                    <a href="">Read more</a>
-                </div>
-            </div>
-            <div class="Card card-3">
-                <div class="Card-3-img">
-                   <img src="img/Bg3.png" alt="картинка 2">
-                </div>
-                <div class="Card-3-text">
-                    <h4>Cloud Budget Management Software</h4>
-                    <p>Our software is made so you can access and manage your budget</p>
-                    <a href="">Read more</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="Section Section-Technology">
-        <div class="container">
-            <h3>Technology</h3>
-            <div class="Tech tech-cloud storage">
-                <div class="cloud storage-text">
-                    <h4>Cloud Storage</h4>
-                    <p>Access your account from anywhere in the world on any device</p>
-                </div>
-            </div>
-            <div class="Tech tech-secure">
-                <div class="secure-text">
-                    <h4>Secure</h4>
-                    <p>All your information is stored on secure cloud servers</p>
-                </div>
-            </div>
-            <div class="Tech tech-PDF">
-                <div class="PDF-text">
-                    <h4>PDF Download</h4>
-                    <p>Download any of your reports in PDF format</p>
-                </div>
-                <div class="Tech tech-CSV">
-                    <div class="CSV-text">
-                        <h4>CSV Download</h4>
-                        <p>All your information is stored on secure cloud servers</p>
+    <div class="page__inner">
+        <div class="page__content">
+
+            <!--Шапка сайта start-->
+            <header class="page-header">
+                <div class="container">
+                    <div class="row">
+                        <div class="logo">
+                            <img src="img/logo.png" alt="логотип">
+                        </div>
+                        <nav class="page-nav">
+                            <ul>
+                                <li>
+                                    <a href="">OVERVIW</a>
+                                </li>
+                                <li>
+                                    <a href="">FEATURES</a>
+                                </li>
+                                <li>
+                                    <a href="">TECHNOLOGY</a>
+                                </li>
+                                <li>
+                                    <a href="">CONTACT</a>
+                                </li>
+                                <li>
+                                    <a href=""> SING UP</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="auth">
+                            <a href=""> LOGIN </a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </header>
+            <!--Шапка сайта end-->
+
+
+            <!--Блок с заставкой start-->
+            <section class="main-section">
+                <div class="container">
+                    <div>
+                        <h1>CLOUDBUDGET</h1>
+                        <P>Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of <br>
+                            Up to €4.99
+                        </P>
+                        <div><a href="">SING UP</a></div>
+                    </div>
+                </div>
+            </section>
+            <!--Блок с заставкой end-->
+
+
+            <!--Блок с видео start-->
+            <section class="section section-video">
+                <div class="container">
+                    <div class="row">
+                        <div class="col col-6">
+                            <h3>Easy to Use Cloud Budget Management Software </h3>
+                            <p>Our software is made so you can access and manage your budget and expenses online at any
+                                time from any device. It provides detailed income and expense reports with graphs so you
+                                can
+                                easilly see your spending patterns and budget at a glance.
+                                Read below to find out more.
+                            </p>
+                            <p><a href="">Learn more</a>
+                            </p>
+                        </div>
+                        <div class="col col-6">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/hBjEaG0uH24"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Блок с видео end-->
+
+
+            <!--Блок с функциями start-->
+            <section class="section section-features section_colored">
+                <div class="container">
+                    <h2 class="h2 text-center">Features</h2>
+                    <div class="row">
+
+                        <div class="col col-4">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="img/Bg1.png" alt="Supports All Currencies and Cards"
+                                        class="img-responsive">
+                                </div>
+                                <div class="card__inner text-center">
+                                    <h3 class="card__name">
+                                        Supports All Currencies and Cards
+                                    </h3>
+                                    <div class="card__info">
+                                        <p>We support all popular currencies and is fully customizable to add</p>
+                                    </div>
+                                    <div class="card__footer">
+                                        <a href="">Read more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col col-4">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="img/Bg2.png" alt="Manage your expenses on the go" class="img-responsive">
+                                </div>
+                                <div class="card__inner text-center">
+                                    <h3 class="card__name">
+                                        Manage your expenses on the go
+                                    </h3>
+                                    <div class="card__info">
+                                        <p>You can access your account from anywhere in the world on any device</p>
+                                    </div>
+                                    <div class="card__footer">
+                                        <a href="">Read more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col col-4">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="img/Bg3.png" alt="Cloud Budget Management Software"
+                                        class="img-responsive">
+                                </div>
+                                <div class="card__inner text-center">
+                                    <h3 class="card__name">
+                                        Cloud Budget Management Software
+                                    </h3>
+                                    <div class="card__info">
+                                        <p>Cloud Budget Management Software</p>
+                                    </div>
+                                    <div class="card__footer">
+                                        <a href="">Read more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Блок с функциями end-->
+
+
+            <section class="section section-technology">
+                <div class="container">
+                    <h3>Technology</h3>
+
+                    <div class="tech">
+                        <div class="tech-img">
+                            <img src="img/01.png" alt="">
+                        </div>
+                        <div class="tech-text">
+                            <h4>Cloud Storage</h4>
+                            <p>Access your account from anywhere in the world on any device</p>
+                        </div>
+                    </div>
+
+                    <div class="tech">
+                        <div class="tech-img">
+                            <img src="img/02.png" alt="">
+                        </div>
+                        <div class="tech-text">
+                            <h4>Secure</h4>
+                            <p>All your information is stored on secure cloud servers</p>
+                        </div>
+                    </div>
+
+                    <div class="tech">
+                        <div class="tech-img">
+                            <img src="img/03.png" alt="">
+                        </div>
+                        <div class="tech-text">
+                            <h4>PDF Download</h4>
+                            <p>Download any of your reports in PDF format</p>
+                        </div>
+                    </div>
+
+                    <div class="tech">
+                        <div class="tech-img">
+                            <img src="img/04.png" alt="">
+                        </div>
+                        <div class="tech-text">
+                            <h4>CSV Download</h4>
+                            <p>All your information is stored on secure cloud servers</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section section-pink">
+                <div class="container">
+                    <div class="left-block-dowlands">
+                        <h3>Stay focused on saving money</h3>
+                        <p>It is important to stay focused on saving money in any way you can. We help you monitor your
+                            spending
+                            habits so you can easily spot and cut any unnecessary expenses. Simply join today to get
+                            started!
+                        </p>
+                    </div>
+
+                    <div class="dowland-link">
+                        <div>
+                            <a href="">Google</a>
+                        </div>
+                        <div>
+                            <a href="">Apple</a>
+                        </div>
+                        <div>
+                            <a href="">Windows</a>
+                        </div>
+
+                        <div class="right-block-slider">
+                            <div>
+                                <img src="img/Video_bg.png" alt="">
+                            </div>
+                            <div>
+                                <img src="img/Video_bg2.png" alt="">
+                            </div>
+                            <div>
+                                <img src="img/Video_bg3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+            </section>
+
+            <section class="section section-contacts">
+                <div class="container">
+                    <div class="left-block-contacts">
+                        <h3>Contact</h3>
+                        <p>Questions or concerns? Just fill out the form below and our support team will get back to you
+                            within
+                            24 hours</p>
+                    </div>
+
+                    <div class="right-block-contact">
+                        <input type="text" name="First Name" id="">
+                        <input type="text" name="Last Name" id="">
+                        <input type="tel" name="Number" id="">
+                        <select name="Select Service" id=""></select>
+                        <input type="submit" value="SUMBIT NOW">
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
+    </div>
+
     <footer>
-        <div class="footer-inf">
-            <div >
+        <div class="page__footer-inf">
+            <div>
                 <h5>Adress</h5>
-             <p>Pipang Ltd, Griva Digeni,
-                81-83 Jacovides Tower, 1st Floor
-                1090 Picosia USA</p>
+                <p>Pipang Ltd, Griva Digeni,
+                    81-83 Jacovides Tower, 1st Floor
+                    1090 Picosia USA</p>
             </div>
             <div>
                 <h5>Services</h5>
@@ -130,6 +303,7 @@
             <div>
                 <h5>Get in Touch</h5>
                 <p>info@cloudbudget.com
+                    <br>
                     +1 844-721-7120
                 </p>
             </div>
